--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
 
   linting:
     name: Linting
-    runs-on: [self-hosted, docker]
+    runs-on: ubuntu-latest
     needs: [build]
 
     steps:
@@ -34,12 +34,12 @@ jobs:
 
   testing:
     name: Testing
-    runs-on: [self-hosted, docker]
+    runs-on: ubuntu-latest
     needs: [build, linting]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Test coverage
+      - name: Test
         run: |
-          make test-coverage
+          make test
