--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,8 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
+    name: Build
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout
@@ -16,7 +16,7 @@ jobs:
 
   linting:
     name: Linting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build]
 
     steps:
@@ -34,7 +34,7 @@ jobs:
 
   testing:
     name: Testing
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build, linting]
 
     steps:
@@ -43,3 +43,19 @@ jobs:
       - name: Test
         run: |
           make test
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-20.04
+    needs: [build, linting, testing]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ secrets.DOCKER_USERNAME }}/literal
+          tag_with_ref: true
