--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,8 @@ on: [push]
 
 jobs:
   build:
-    name: Build Docker Images
-    runs-on: ubuntu-latest
+    name: Build
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -15,7 +15,7 @@ jobs:
 
   linting:
     name: Linting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build]
     steps:
       - name: Checkout
@@ -32,7 +32,7 @@ jobs:
 
   testing:
     name: Testing
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build, linting]
     steps:
       - name: Checkout
