--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,8 @@ services:
     image: "literal"
     container_name: "literal_app"
     build: literal
-    volumes:
-      - static_volume:/app/staticfiles
-    command: gunicorn literal.wsgi:application --bind 0.0.0.0:8000
+    restart: always
+    command: stdbuf -oL python manage.py runserver 0.0.0.0:8000
     depends_on:
       - postgres
     ports:
@@ -16,28 +15,30 @@ services:
       - 8000
     env_file:
         - variables/dev.env
+    volumes:
+      - static_volume:/app/staticfiles
 
   postgres:
     image: postgres:12.0-alpine
     container_name: "literal_postgres"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
     expose:
       - 5432
     ports:
       - "5432:5432"
     env_file:
       - ./variables/dev.env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
 
   nginx:
     build: nginx
     container_name: "literal_nginx"
-    volumes:
-      - static_volume:/app/staticfiles
     ports:
       - 1337:80
     depends_on:
       - app
+    volumes:
+      - static_volume:/app/staticfiles
 
 volumes:
   postgres_data:
