--- a/variables/prod.env
+++ b/variables/prod.env
@@ -10,4 +10,5 @@ PG_SSL_MODE=disable
 
 DJANGO_SECRET_KEY=django-insecure-!7i6$$plbdc7ugxrcm$mn6#_h8bxrn&kuma)l+gd76ld4f(=sh
 DJANGO_DEBUG=False
+DJANGO_LOCAL_TESTING_MODE=False
 DEBUG_COLLECTSTATIC=1
