--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -18,6 +18,7 @@ services:
     volumes:
       - ./literal/:/app/
       - static_volume:/app/staticfiles
+      - media_volume:/app/mediafiles
 
   postgres:
     image: postgres:12.0-alpine
@@ -40,7 +41,9 @@ services:
       - app
     volumes:
       - static_volume:/app/staticfiles
+      - media_volume:/app/mediafiles
 
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
