--- a/variables/prod.env
+++ b/variables/prod.env
@@ -18,3 +18,9 @@ EMAIL_HOST_USER=arinaberdnikova999@gmail.com
 EMAIL_HOST_PASSWORD=qwerty953504
 EMAIL_PORT=587
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+
+CELERY_BROKER_URL=redis://redis:6379
+CELERY_RESULT_BACKEND=redis://redis:6379
+CELERY_ACCEPT_CONTENT=application/json
+CELERY_TASK_SERIALIZER=json
+CELERY_RESULT_SERIALIZER=json
