--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Build images
+        run: |
+          make start
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
