--- a/.github/workflows/deploy_dockerhub.yaml
+++ b/.github/workflows/deploy_dockerhub.yaml
@@ -9,13 +9,12 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Build images
-        run: |
-          make start
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          file: ./literal/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: spanickroon/literal
+          repository: spanickroon/literal:latest
           tag_with_ref: true
+
