--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,6 +58,7 @@ jobs:
   push_to_registry_image:
     name: Push to Docker Hub
     runs-on: ubuntu-latest
+    needs: [build, linting, testing]
     steps:
 
       - name: Check Out Repo
