--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
     needs: [build, linting]
     steps:
       - name: Checkout
-        uses: actions/checkout@v
+        uses: actions/checkout@v2
       - name: Test
         run: |
           make test
