Changed prod file

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,10 +2,13 @@ version: "3.5"
 
 services:
   app:
-    image: "literal"
+    image: spanickroon/literal
     container_name: "literal_app"
-    build: literal
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "
+      ./manage.py makemigrations &&
+      ./manage.py migrate &&
+      ./manage.py collectstatic  --no-input &&
+      gunicorn --workers=4 literal.wsgi -b :8000"
     depends_on:
       - postgres
       - celery
@@ -57,9 +60,8 @@ services:
       - 6379
 
   celery:
-    image: "literal_celery_image"
+    image: spanickroon/literal
     container_name: "literal_celery"
-    build: literal
     command: celery -A literal worker -l info
     volumes:
       - celery_volume/:/usr/src/app/
